<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Title"
        android:layout_width="170dp"
        android:layout_height="58dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:text="My Profile"
        android:textSize="36dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstNameField"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="252dp"
        android:text="First Name:"
        android:textSize="32dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="252dp"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/firstNameField"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastNameField"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="Last Name:"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/lastNameField"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>